--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: start;
+  width: 80vw;
+  margin: auto;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.cards_contianer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: rgb(26, 23, 23);
+  margin: auto;
+  color: white;
+  padding: 3rem 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cooltext3 {
+  text-align: center;
+}
+.bottom_icons {
+  display: flex;
+  justify-content: space-around;
+}
+.bottom_icon {
+  width: 50px;
+  height: 50px;
+  color: #1da1f2;
+  padding: 1rem 0;
+}
+.inGame_screenShots__item {
+  width: 300px;
+  height: auto;
+  object-fit: contain;
+  margin-right: 1rem;
+}
+.ourbrain_screenShots__item {
+  width: 300px;
+  height: auto;
+  object-fit: contain;
+  /* margin: 0 2rem; */
 }
