--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,104 @@
   margin-right: 1rem;
 }
 .ourbrain_screenShots__item {
-  width: 300px;
+  width: 335px;
   height: auto;
   object-fit: contain;
-  /* margin: 0 2rem; */
+}
+.slick-slide {
+}
+
+.BannerItems_style {
+  background-image: url(/src/images/bannerImg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+.banner-details {
+  width: 50%;
+}
+.banner-details h2 {
+  font-size: 48px;
+  z-index: 100 !important;
+  position: relative;
+  font-family: raleway, sans-serif;
+  font-weight: 300;
+}
+.banner-details p {
+  font-family: poppins, sans-serif;
+  border-left-width: 1px;
+  border-left-style: solid;
+  padding-left: 20px;
+  max-width: 410px;
+  font-size: 14px;
+  line-height: 1.71429;
+  margin-bottom: 37px;
+}
+.banner-details button {
+  font-size: 15px;
+  font-weight: 600;
+  overflow: visible;
+  background: #0750d0;
+  border: none;
+  height: 45px;
+  line-height: 1.2;
+  background-image: linear-gradient(135deg, #a1052c 0%, #0750d0 100%);
+  padding: 0 18px;
+  font-family: poppins, sans-serif;
+  color: #fff;
+  z-index: 1;
+}
+
+.banner-details .banner-inner-head .banner-num {
+  position: absolute;
+  margin-top: -17px;
+  margin-left: -18px;
+  font-size: 15px;
+  font-weight: 600;
+}
+.banner-inner-head:before {
+  content: "";
+  position: absolute;
+  margin-top: -20px;
+  margin-left: -25px;
+  background: #090611;
+  width: 205px;
+  height: 90px;
+  opacity: 0.7;
+}
+.slick-slide .banner-details {
+  transform: translateX(-30%);
+  transition: all 0.5s;
+  transition-delay: 0.5s;
+}
+.slick-current .banner-details {
+  overflow: hidden;
+  transform: translateX(0);
+}
+
+@media screen and (max-width: 990px) {
+  .cooltext3 img {
+    width: 690px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .cards_contianer {
+    flex-direction: column;
+  }
+  .cooltext3 img {
+    width: 510px;
+  }
+  .ourbrain_screenShots__item {
+    width: 280px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .cooltext3 img {
+    width: 100%;
+  }
 }
