--- a/src/components/UniverseAndUpdates/UniverseAndUpdates.styles.css
+++ b/src/components/UniverseAndUpdates/UniverseAndUpdates.styles.css
@@ -7,21 +7,27 @@
 .uni {
   position: relative;
   background-color: black;
-  /* width: 100vw; */
-  height: 50vh;
+  background-image: url(/src/images/universe.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  min-height: 50vh;
+  display: flex;
 }
 .uni_decoration {
-  width: 300px;
-  height: 90px;
+  /* width: 300px; */
+  /* height: 90px; */
   background-color: rgb(0, 0, 119);
   opacity: 0.2;
 }
 .uni_body {
-  position: absolute;
-  top: 10px;
-  left: 30px;
+  margin: 5vh 20%;
+  position: relative;
+  /* top: 10px; */
+  /* left: 30px; */
   z-index: 1;
-  width: 40vw;
+  width: 550px;
   height: 100%;
 }
 .uni_p {
@@ -30,9 +36,21 @@
 .uni_btn {
   background-image: linear-gradient(135deg, #7837cf 0%, rgb(161, 68, 51) 100%);
   width: 200px;
+  margin: 2vh 0;
   padding: 1rem;
 }
 .uni_btn:hover {
   background: rgb(161, 68, 51);
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .uni_body {
+    margin: 5vh 2vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .uni_body {
+    width: 100%;
+  }
 }
