--- a/src/components/MenuAnimation/styles.css
+++ b/src/components/MenuAnimation/styles.css
@@ -11,9 +11,9 @@
   height: 45px;
   position: absolute;
   right: 0;
-  margin-right: 100px;
-  z-index: 1000;
+  /* margin-right: 100px; */
   margin-top: 20px;
+  z-index: 1000;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -76,8 +76,14 @@
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg);
 }
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 768px) {
   .nav-icon1 {
     display: block;
+  }
+}
+@media screen and (max-width: 768x) {
+  .nav-icon1 {
+    margin-right: 1rem;
+    margin-top: 1rem;
   }
 }
