--- a/src/components/Nav/nav.styles.css
+++ b/src/components/Nav/nav.styles.css
@@ -1,6 +1,6 @@
 .nav {
   position: fixed;
-  padding: 10px;
+  padding: 1rem;
   height: 10vh;
   z-index: 999;
   padding-left: 200px;
@@ -15,6 +15,19 @@
   width: 80%;
   align-items: center;
   box-sizing: border-box;
+}
+.nav_larg {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.nav_mob {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  display: none;
 }
 .nav_items {
   display: flex;
@@ -56,8 +69,30 @@
   width: fit-content;
   margin: 1vh 20px;
 }
-@media screen and (max-width: 990px) {
+
+@media screen and (max-width: 768px) {
   .nav_body {
     display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .nav_body {
+    display: none;
+  }
+  .nav_larg {
+    display: none;
+  }
+  .logo_token {
+    margin-right: auto;
+  }
+  .nav {
+    padding-left: 1rem;
+    /* background-color: red; */
+  }
+  .nav_mob {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
   }
 }
